Use mock API for test results, implement Insights and Present views, update openAPI spec
